# ChronosFracture

./: .clippy.toml  .gitattributes  .gitignore  Cargo.toml  LICENSE  MANUAL.md  PLAN.md  README.md  check_snippets.py  conftest.py  evtx_inspect.py  test_shellbags.py
cli/: pyproject.toml  requirements-linux.txt  requirements-windows.txt  verify_phase2.py  verify_prefetch.py
cli/supertimeline/: __main__.py  image.py  image_ewf.py  main.py  orchestrator.py  vss.py
cli/supertimeline/parsers/: amcache.py  browser.py  lnk.py  logfile.py  pcasvc.py  prefetch.py  prefetch_decompress.py  registry.py  srum.py  usnjrnl_recover.py  wintimeline.py
cli/supertimeline/storage/: writer.py
cli/supertimeline/utils/: timestamps.py
core/: Cargo.toml
core/src/: lib.rs  types.rs
core/src/parsers/: evtx.rs  jumplists.rs  lnk.rs  mft.rs  mod.rs  prefetch.rs  pshistory.rs  read_helpers.rs  recyclebin.rs  shellbags.rs  tasks.rs  usnjrnl.rs  wer.rs
core/src/storage/: arrow_writer.rs  mod.rs
core/src/utils/: lzxpress.rs  mod.rs  timestamps.rs
tests/: test_mft.py  test_srum.py  test_timestamps.py
